--- a/media-gfx/brscan4/ChangeLog
+++ b/media-gfx/brscan4/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Dec 2014; Ulrich Müller <ulm@gentoo.org> brscan4-0.4.2.4.ebuild:
+  Fix some install locations and permission bits.
+
   01 Dec 2014; Ulrich Müller <ulm@gentoo.org> brscan4-0.4.2.4.ebuild:
   Add configuration for sane.
 
