media-gfx/brscan4: Add missing dependency on libusb.
Package-Manager: portage-2.2.14

--- a/media-gfx/brscan4/ChangeLog
+++ b/media-gfx/brscan4/ChangeLog
@@ -3,6 +3,9 @@
 # $Header: $
 
   04 Dec 2014; Ulrich Müller <ulm@gentoo.org> brscan4-0.4.2.4.ebuild:
+  Add missing dependency on libusb.
+
+  04 Dec 2014; Ulrich Müller <ulm@gentoo.org> brscan4-0.4.2.4.ebuild:
   Fix some install locations and permission bits.
 
   01 Dec 2014; Ulrich Müller <ulm@gentoo.org> brscan4-0.4.2.4.ebuild:
