--- a/net-print/brother-mfcj870dw/ChangeLog
+++ b/net-print/brother-mfcj870dw/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Jul 2015; Ulrich Müller <ulm@gentoo.org>
+  brother-mfcj870dw-20130812.ebuild:
+  Install ppd file into subdirectory.
+
 *brother-mfcj870dw-20130812 (18 Jul 2015)
 
   18 Jul 2015; Ulrich Müller <ulm@gentoo.org>
