--- a/net-print/brother-dcpj925dw/ChangeLog
+++ b/net-print/brother-dcpj925dw/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-print/brother-dcpj925dw
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  21 Jul 2015; Ulrich Müller <ulm@gentoo.org>
+  brother-dcpj925dw-20131010.ebuild:
+  Install ppd file into subdirectory.
 
   04 Dec 2014; Ulrich Müller <ulm@gentoo.org>
   brother-dcpj925dw-20131010.ebuild:
