--- a/games-board/egtb-nalimov/ChangeLog
+++ b/games-board/egtb-nalimov/ChangeLog
@@ -1,6 +1,12 @@
-# ChangeLog for games-board/tablebase
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: $
+# ChangeLog for games-board/egtb-nalimov
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Id$
+
+*egtb-nalimov-20131213 (28 Sep 2015)
+
+  28 Sep 2015; Ulrich Müller <ulm@gentoo.org> +egtb-nalimov-20131213.ebuild,
+  +metadata.xml:
+  Package move from tablebase to egtb-nalimov.
 
   27 Mar 2014; Ulrich Müller <ulm@gentoo.org> tablebase-20121127.ebuild:
   Inherit check-reqs.eclass and check for disk space requirements.
