--- a/dev-tex/vc/ChangeLog
+++ b/dev-tex/vc/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*vc-0.5-r1 (05 Nov 2015)
+
+  05 Nov 2015; Ulrich Müller <ulm@gentoo.org> -vc-0.5.ebuild,
+  +vc-0.5-r1.ebuild, +files/vc-0.5-git-status.patch:
+  Fix parsing of git status output.
+
   15 May 2015; Ulrich Müller <ulm@gentoo.org> vc-0.5.ebuild,
   +files/vc-0.5-fix-git-date.patch:
   Fix date information in git.
