--- a/games-misc/fortune-mod-theo-de-raadt/ChangeLog
+++ b/games-misc/fortune-mod-theo-de-raadt/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for games-misc/fortune-mod-theo-de-raadt
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
+
+*fortune-mod-theo-de-raadt-20160912 (16 Oct 2016)
+
+  16 Oct 2016; Ulrich Müller <ulm@gentoo.org>
+  -fortune-mod-theo-de-raadt-20140406.ebuild,
+  +fortune-mod-theo-de-raadt-20160912.ebuild:
+  Version bump.
 
 *fortune-mod-theo-de-raadt-20140406 (11 Apr 2014)
 
