--- a/games-board/tablebase-nalimov/ChangeLog
+++ b/games-board/tablebase-nalimov/ChangeLog
@@ -1,5 +1,11 @@
-# ChangeLog for games-board/egtb-nalimov
-# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# ChangeLog for games-board/tablebase-nalimov
+# Copyright 1999-2017 Gentoo Foundation; Distributed under the GPL v2
+
+*tablebase-nalimov-0_pre20131213 (09 Mar 2017)
+
+  09 Mar 2017; Ulrich Müller <ulm@gentoo.org>
+  -egtb-nalimov-20131213.ebuild, +tablebase-nalimov-0_pre20131213.ebuild:
+  Package move. Change to conventional versioning scheme.
 
   08 Oct 2015; Ulrich Müller <ulm@gentoo.org> egtb-nalimov-20131213.ebuild:
   Calculation of SRC_URI refurbished.
