games-board/tablebase-nalimov: Rename the tb5 use flag to 5-pieces.
games-board/chessdb (which had a tb4 flag) is gone, so no reason to
stay with that naming scheme.

Package-Manager: Portage-2.3.4, Repoman-2.3.2

--- a/games-board/tablebase-nalimov/ChangeLog
+++ b/games-board/tablebase-nalimov/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for games-board/tablebase-nalimov
 # Copyright 1999-2017 Gentoo Foundation; Distributed under the GPL v2
 
+  09 Mar 2017; Ulrich Müller <ulm@gentoo.org>
+  tablebase-nalimov-0_pre20131213.ebuild, metadata.xml:
+  Rename the tb5 use flag to 5-pieces.
+
 *tablebase-nalimov-0_pre20131213 (09 Mar 2017)
 
   09 Mar 2017; Ulrich Müller <ulm@gentoo.org>
